--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                 <a class="nav-link" href="gallery.html">GALLERY</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">QUOTES</a>
+                <a class="nav-link" href="quotes.html">QUOTES</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">OATHS</a>
               </li>
             </ul>
            <div class="container">
