--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="quotes.html">QUOTES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">OATHS</a>
+                <a class="nav-link" href="oaths.html">OATHS</a>
               </li>
             </ul>
            <div class="container">
